// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityPopularTagsComponent should not show filter title when filtering by multiple posts 1`] = `
<pf-community-trending-and-filtered-tags
  communityPosts$={[Function Store]}
  filterOptionsSubscription={[Function Subscriber]}
  filterStore={[Function Store]}
  filterTitle={[Function String]}
  filterTitle$={[Function Store]}
  filterTitleSubscription={[Function Subscriber]}
  filteredByPost$={[Function Store]}
  filteredCategories={[Function Array]}
  filteredTags={[Function Array]}
  filters$={[Function Observable]}
  isFilteredByPostId={[Function Boolean]}
  isFilteredByReplyId="false"
  router={[Function Object]}
  store={[Function Store]}
  trendingTagSubscription={[Function Subscriber]}
  trendingTags={[Function Array]}
  trendingTags$={[Function Store]}
>
  <div
    class="mb-3"
    id="tag-container"
  >
    <h5
      id="tag-section-header"
    >
      FILTERS
    </h5>
    
    
    
    
    
    
    <div
      class="mt-1"
    >
      
      
      <button
        class="btn btn-secondary submit-button-container"
        type="button"
      >
        <i
          class="far fa-eye pr-2"
        />
        <span>
          View All Posts
        </span>
      </button>
    </div>
    
  </div>
</pf-community-trending-and-filtered-tags>
`;

exports[`CommunityPopularTagsComponent should show filter title when filtering by single post 1`] = `
<pf-community-trending-and-filtered-tags
  communityPosts$={[Function Store]}
  filterOptionsSubscription={[Function Subscriber]}
  filterStore={[Function Store]}
  filterTitle={[Function String]}
  filterTitle$={[Function Store]}
  filterTitleSubscription={[Function Subscriber]}
  filteredByPost$={[Function Store]}
  filteredCategories={[Function Array]}
  filteredTags={[Function Array]}
  filters$={[Function Observable]}
  isFilteredByPostId={[Function Boolean]}
  isFilteredByReplyId="false"
  router={[Function Object]}
  store={[Function Store]}
  trendingTagSubscription={[Function Subscriber]}
  trendingTags={[Function Array]}
  trendingTags$={[Function Store]}
>
  <div
    class="mb-3"
    id="tag-container"
  >
    <h5
      id="tag-section-header"
    >
      FILTERS
    </h5>
    
    
    
    
    
    
    <div
      class="mt-1"
    >
      
      <button
        class="btn m-1 tag py-2 px-3 shadow-none btn-selected"
        type="button"
      >
        <span>
          Test Post Filter
        </span>
        <span>
          <i
            class="fas fa-times-circle icon"
          />
        </span>
      </button>
      
    </div>
    
  </div>
</pf-community-trending-and-filtered-tags>
`;

exports[`CommunityPopularTagsComponent should show trending tags 1`] = `
<pf-community-trending-and-filtered-tags
  communityPosts$={[Function Store]}
  filterOptionsSubscription={[Function Subscriber]}
  filterStore={[Function Store]}
  filterTitle$={[Function Store]}
  filterTitleSubscription={[Function Subscriber]}
  filteredByPost$={[Function Store]}
  filteredCategories={[Function Array]}
  filteredTags={[Function Array]}
  filters$={[Function Store]}
  isFilteredByPostId="false"
  isFilteredByReplyId="false"
  router={[Function Object]}
  store={[Function Store]}
  trendingTagSubscription={[Function Subscriber]}
  trendingTags={[Function Array]}
  trendingTags$={[Function Store]}
>
  <div
    class="mb-3"
    id="tag-container"
  >
    <h5
      id="tag-section-header"
    >
      TRENDING TAGS
    </h5>
    
    
  </div>
</pf-community-trending-and-filtered-tags>
`;
